QuorumWebsite/examples/Errors/Error5.quorum
use Libraries.Game.Game
// INSERT YOUR " USE " STATEMENTS HERE

class Main is Game
    action Main
        StartGame ()
    end

    action CreateGame
    // INSERT YOUR CODE HERE
    
    end
end

use Libraries.Sound.Audio
Audio.clickSound
clickSound:Load("media/astro/click.wav")
clickSound:Play()